--- a/ui/src/app/components/discussion-card/discussion-card.component.html
+++ b/ui/src/app/components/discussion-card/discussion-card.component.html
@@ -1,136 +1,144 @@
 <div class="card">
   <div class="card-block">
-    <div *ngIf="!editMode">
-      <h2 class="card-title">
+    <div *ngIf="!discussion?.deleted">
+      <div *ngIf="!editMode">
+        <h2 class="card-title">
         <a [routerLink]="['/Discussion', {discussionId: discussion?.id}]" class="link-unstyled">{{discussion?.title}} </a>
         <small *ngIf="discussion && isCreator()"><i class="fa fa-fw fa-edit" role="button" (click)="toggleEditMode()"></i></small>
       </h2>
-      <p *ngIf="discussion?.text" class="card-text"
-        [innerHTML]="discussion.text | markdown"></p>
-      <small>
+        <p *ngIf="discussion?.text" class="card-text"
+          [innerHTML]="discussion.text | markdown"></p>
+        <small>
         <ul *ngIf="discussion?.tags" class="list-inline">tags:
           <li class="label label-default list-inline-item" *ngFor="let tag of discussion?.tags">
             <a class="link-unstyled" [routerLink]="['/Tag', {tagId: tag.id}]">{{removeQuotes(tag.name)}}</a>
           </li>
         </ul>
       </small>
-      <small class="text-muted">
+        <small class="text-muted">
         <span *ngIf="!discussion?.modified">created {{discussion?.created | moment}}</span>
         <span *ngIf="discussion?.modified"><i>modified {{discussion?.modified | moment}}</i></span>
           by {{discussion?.userName}}
       </small>
-      <ul class="list-inline">
-        <li *ngIf="discussion?.private_" class="label label-danger list-inline-item">Private</li>
-        <li *ngIf="discussion && !isCreator()" role="button"
-          class="list-inline-item" (click)="toggleShowVoteSlider()"><i class="fa fa-fw fa-star-half-o"></i></li>
-        <li *ngIf="discussion?.avgRank" class="label label-pill label-default list-inline-item">
-          {{discussion?.avgRank}}</li>
-        <li *ngIf="discussion?.userRank" class="label label-pill label-info list-inline-item">
-          {{discussion?.userRank}}</li>
-        <li *ngIf="discussion?.numberOfVotes" class="text-muted list-inline-item">
-          <small> {{discussion?.numberOfVotes}} votes</small></li>
-        <li *ngIf="discussion?.link" class="list-inline-item">
-          <a class="link-unstyled" href="{{discussion?.link}}"
-            target="_blank"><i class="fa fa-external-link"
+        <ul class="list-inline">
+          <li *ngIf="discussion?.private_" class="label label-danger list-inline-item">Private</li>
+          <li *ngIf="discussion && !isCreator()" role="button"
+            class="list-inline-item" (click)="toggleShowVoteSlider()"><i class="fa fa-fw fa-star-half-o"></i></li>
+          <li *ngIf="discussion?.avgRank" class="label label-pill label-default list-inline-item">
+            {{discussion?.avgRank}}</li>
+          <li *ngIf="discussion?.userRank" class="label label-pill label-info list-inline-item">
+            {{discussion?.userRank}}</li>
+          <li *ngIf="discussion?.numberOfVotes" class="text-muted list-inline-item">
+            <small> {{discussion?.numberOfVotes}} votes</small></li>
+          <li *ngIf="discussion?.link" class="list-inline-item">
+            <a class="link-unstyled" href="{{discussion?.link}}"
+              target="_blank"><i class="fa fa-external-link"
               aria-hidden="true"></i></a>
-        </li>
-        <li class="list-inline-item" role="button"><i class="fa fa-fw fa-comments-o"
-            [routerLink]="['/Discussion', {discussionId: discussion?.id}]"></i></li>
-      </ul>
-      <div *ngIf="showVoteSlider">
-        <input [value]="discussion?.userRank" (mouseup)="saveDiscussionRank($event.target.value)"
-          (input)="updateDiscussionRank($event.target.value)"
-          type="range" min="0" max="100" step="1"
-          (value)="discussion?.userRank" />
+          </li>
+          <li class="list-inline-item" role="button"><i class="fa fa-fw fa-comments-o"
+              [routerLink]="['/Discussion', {discussionId: discussion?.id}]"></i></li>
+        </ul>
+        <div *ngIf="showVoteSlider">
+          <input [value]="discussion?.userRank" (mouseup)="saveDiscussionRank($event.target.value)"
+            (input)="updateDiscussionRank($event.target.value)"
+            type="range" min="0" max="100"
+            step="1" (value)="discussion?.userRank"
+          />
+        </div>
+      </div>
+      <div *ngIf="editMode">
+        <div class="form-group row">
+          <label class="col-sm-1 form-control-label">Title</label>
+          <div class="col-sm-11">
+            <input [(ngModel)]="discussion.title" class="form-control"
+              maxlength="140" />
+          </div>
+        </div>
+        <div class="form-group row">
+          <label class="col-sm-1 form-control-label">Link</label>
+          <div class="col-sm-11">
+            <input [(ngModel)]="discussion.link" placeholder="optional"
+              class="form-control" />
+          </div>
+        </div>
+        <div class="checkbox">
+          <label>
+            <input [(ngModel)]="discussion.private_"
+              type="checkbox" /> Private
+          </label>
+        </div>
+        <app-markdown-edit [inputText]="discussion.text"
+          (textEvent)="setEditText($event)"></app-markdown-edit>
+        <br>
+        <div class="form-group row">
+          <label class="col-sm-1 form-control-label">Tags</label>
+          <div class="col-md-5 input-group">
+            <input #tagTerm (keyup)="tagSearch(tagTerm.value)"
+              [(ngModel)]="tagSearchTerm" [typeahead]="tagSearchResults"
+              (typeaheadOnSelect)="tagTypeaheadOnSelect($event.item)"
+              [typeaheadOptionField]="'name'"
+              (typeaheadLoading)="tagChangeTypeaheadLoading($event)"
+              (typeaheadNoResults)="tagChangeTypeaheadNoResults($event)"
+              class="form-control">
+            <button (click)="createTag()" class="input-group-addon btn btn-primary"><i class="fa fa-fw fa-plus"></i></button>
+            <div *ngIf="tagTypeaheadLoading===true">
+              <i class="fa fa-circle-o-notch fa-spin fa-fw"></i>
+            </div>
+          </div>
+          <ul *ngIf="discussion?.tags" class="col-md-6 list-inline form-control-label">
+            <li role="button" (click)="removeTag(tag)"
+              class="label label-default list-inline-item"
+              *ngFor="let tag of discussion?.tags">
+              <span>{{removeQuotes(tag.name)}}<i class="fa fa-fw fa-remove"></i></span>
+            </li>
+          </ul>
+          <div *ngIf="tagTypeaheadNoResults===true"
+            class="">
+            <i class="fa fa-fw fa-remove"></i>No
+            Results Found
+          </div>
+          <div *ngIf="tooManyTagsError" class="row col-sm-12 help-block text-danger">
+            <small>Can't Add more than 3 tags</small>
+          </div>
+        </div>
+        <div *ngIf="discussion?.private_" class="form-group row">
+          <label class="col-sm-1 form-control-label">Invite Users</label>
+          <div class="col-md-5">
+            <input #userTerm (keyup)="userSearch(userTerm.value)"
+              [(ngModel)]="userSearchTerm"
+              [typeahead]="userSearchResults"
+              (typeaheadOnSelect)="userTypeaheadOnSelect($event.item)"
+              [typeaheadOptionField]="'name'"
+              (typeaheadLoading)="userChangeTypeaheadLoading($event)"
+              (typeaheadNoResults)="userChangeTypeaheadNoResults($event)"
+              class="form-control">
+            <div *ngIf="userTypeaheadLoading===true">
+              <i class="fa fa-circle-o-notch fa-spin fa-fw"></i>
+            </div>
+          </div>
+          <ul *ngIf="discussion?.privateUsers" class="col-md-6 list-inline form-control-label">
+            <li role="button" (click)="removePrivateUser(privateUser)"
+              class="label label-default list-inline-item"
+              *ngFor="let privateUser of privateUsersWithoutYou()">
+              <span>{{privateUser.name}}<i class="fa fa-fw fa-remove"></i></span>
+            </li>
+          </ul>
+          <div *ngIf="userTypeaheadNoResults===true"
+            class="">
+            <i class="fa fa-fw fa-remove"></i>No
+            Results Found
+          </div>
+        </div>
+        <br>
+        <div class="btn-group" role="group">
+          <button (click)="saveDiscussion()" class="btn btn-primary">Save</button>
+          <button (click)="toggleEditMode()" class="btn btn-warning">Cancel</button>
+          <button (click)="deleteDiscussion()" class="btn btn-danger">Delete</button>
+        </div>
       </div>
     </div>
-    <div *ngIf="editMode">
-      <div class="form-group row">
-        <label class="col-sm-1 form-control-label">Title</label>
-        <div class="col-sm-11">
-          <input [(ngModel)]="discussion.title" class="form-control"
-            maxlength="140" />
-        </div>
-      </div>
-      <div class="form-group row">
-        <label class="col-sm-1 form-control-label">Link</label>
-        <div class="col-sm-11">
-          <input [(ngModel)]="discussion.link" placeholder="optional"
-            class="form-control" />
-        </div>
-      </div>
-      <div class="checkbox">
-        <label>
-          <input [(ngModel)]="discussion.private_"
-            type="checkbox" /> Private
-        </label>
-      </div>
-      <app-markdown-edit [inputText]="discussion.text"
-        (textEvent)="setEditText($event)"></app-markdown-edit>
-      <br>
-      <div class="form-group row">
-        <label class="col-sm-1 form-control-label">Tags</label>
-        <div class="col-md-5 input-group">
-          <input #tagTerm (keyup)="tagSearch(tagTerm.value)"
-            [(ngModel)]="tagSearchTerm" [typeahead]="tagSearchResults"
-            (typeaheadOnSelect)="tagTypeaheadOnSelect($event.item)"
-            [typeaheadOptionField]="'name'"
-            (typeaheadLoading)="tagChangeTypeaheadLoading($event)"
-            (typeaheadNoResults)="tagChangeTypeaheadNoResults($event)"
-            class="form-control">
-          <button (click)="createTag()" class="input-group-addon btn btn-primary"><i class="fa fa-fw fa-plus"></i></button>
-          <div *ngIf="tagTypeaheadLoading===true">
-            <i class="fa fa-circle-o-notch fa-spin fa-fw"></i>
-          </div>
-        </div>
-        <ul *ngIf="discussion?.tags" class="col-md-6 list-inline form-control-label">
-          <li role="button" (click)="removeTag(tag)"
-            class="label label-default list-inline-item"
-            *ngFor="let tag of discussion?.tags">
-            <span>{{removeQuotes(tag.name)}}<i class="fa fa-fw fa-remove"></i></span>
-          </li>
-        </ul>
-        <div *ngIf="tagTypeaheadNoResults===true"
-          class="">
-          <i class="fa fa-fw fa-remove"></i>No
-          Results Found
-        </div>
-        <div *ngIf="tooManyTagsError" class="row col-sm-12 help-block text-danger">
-          <small>Can't Add more than 3 tags</small>
-        </div>
-      </div>
-      <div *ngIf="discussion?.private_" class="form-group row">
-        <label class="col-sm-1 form-control-label">Invite Users</label>
-        <div class="col-md-5">
-          <input #userTerm (keyup)="userSearch(userTerm.value)"
-            [(ngModel)]="userSearchTerm" [typeahead]="userSearchResults"
-            (typeaheadOnSelect)="userTypeaheadOnSelect($event.item)"
-            [typeaheadOptionField]="'name'"
-            (typeaheadLoading)="userChangeTypeaheadLoading($event)"
-            (typeaheadNoResults)="userChangeTypeaheadNoResults($event)"
-            class="form-control">
-          <div *ngIf="userTypeaheadLoading===true">
-            <i class="fa fa-circle-o-notch fa-spin fa-fw"></i>
-          </div>
-        </div>
-        <ul *ngIf="discussion?.privateUsers" class="col-md-6 list-inline form-control-label">
-          <li role="button" (click)="removePrivateUser(privateUser)"
-            class="label label-default list-inline-item"
-            *ngFor="let privateUser of privateUsersWithoutYou()">
-            <span>{{privateUser.name}}<i class="fa fa-fw fa-remove"></i></span>
-          </li>
-        </ul>
-        <div *ngIf="userTypeaheadNoResults===true"
-          class="">
-          <i class="fa fa-fw fa-remove"></i>No
-          Results Found
-        </div>
-      </div>
-      <br>
-      <div class="btn-group" role="group">
-        <button (click)="saveDiscussion()" class="btn btn-primary">Save</button>
-        <button (click)="toggleEditMode()" class="btn btn-danger">Cancel</button>
-      </div>
+    <div *ngIf="discussion?.deleted">
+      <i>deleted {{discussion?.modified | moment}}</i> by {{discussion?.userName}}
     </div>
   </div>
 </div>
