--- a/ui/src/app/components/navbar/navbar.component.html
+++ b/ui/src/app/components/navbar/navbar.component.html
@@ -1,8 +1,11 @@
-<nav class="navbar navbar-full navbar-light" style="background-color: #e3f2fd;">
-  <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar2">
+<nav class="navbar navbar-full navbar-light"
+  style="background-color: #e3f2fd;">
+  <button class="navbar-toggler hidden-sm-up"
+    type="button" data-toggle="collapse" data-target="#exCollapsingNavbar2">
     &#9776;
   </button>
-  <div class="collapse navbar-toggleable-xs" id="exCollapsingNavbar2">
+  <div class="collapse navbar-toggleable-xs"
+    id="exCollapsingNavbar2">
     <a class="navbar-brand" [routerLink]="['Home']">Flow</a>
     <ul class="nav navbar-nav">
       <li class="nav-item">
@@ -18,15 +21,20 @@
         </form>
       </li>
       <li class="nav-item">
-        <button class="btn btn-link link-unstyled" (click)="createDiscussion()">Create discussion</button>
+        <button class="btn btn-link link-unstyled"
+          (click)="createDiscussion()">Create discussion</button>
       </li>
     </ul>
     <ul class="nav navbar-nav pull-xs-right">
       <li class="nav-item">
-        <a *ngIf="!userService.isFullUser()" role="button" class="btn btn-link link-unstyled" (click)="loginModal.show()">Login/Signup</a>
+        <a *ngIf="!userService.isFullUser()" role="button"
+          class="btn btn-link link-unstyled"
+          (click)="loginModal.show()">Login/Signup</a>
       </li>
       <li class="nav-item">
-        <a *ngIf="userService.isAnonymousUser()" (click)="logout()" role="button" class="btn btn-link link-unstyled">Logout</a>
+        <a *ngIf="userService.isAnonymousUser()"
+          (click)="logout()" role="button"
+          class="btn btn-link link-unstyled">Logout</a>
       </li>
     </ul>
     <ul *ngIf="userService.isFullUser()" class="nav navbar-nav pull-xs-right">
@@ -34,44 +42,60 @@
         <a class="btn btn-link link-unstyled"><i class="fa fa-fw fa-bell"></i></a>
       </li>
       <li dropdown class="nav-item" keyboardNav="true">
-        <a id="simple-btn-keyboard-nav" class="btn btn-link link-unstyled" role="button" type="button" dropdownToggle>
+        <a id="simple-btn-keyboard-nav" class="btn btn-link link-unstyled"
+          role="button" type="button" dropdownToggle>
           {{userService.getUser().name}}<span class="caret"></span>
         </a>
         <ul class="dropdown-menu" role="menu" aria-labelledby="simple-btn-keyboard-nav">
           <li role="menuitem"><a class="dropdown-item" href="#">Action</a></li>
           <li class="divider dropdown-divider"></li>
-          <li role="menuitem"><a (click)="logout()" class="dropdown-item" href="#">Logout</a></li>
+          <li role="menuitem"><a (click)="logout()" class="dropdown-item"
+              href="#">Logout</a></li>
         </ul>
       </li>
     </ul>
   </div>
 </nav>
-
 <!-- Modals -->
-<div bsModal #loginModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+<div bsModal #loginModal="bs-modal" class="modal fade"
+  tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"
+  aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-body">
-        <button id="closeModalButton" type="button" class="close" (click)="loginModal.hide()" aria-label="Close">
+        <button id="closeModalButton" type="button"
+          class="close" (click)="loginModal.hide()"
+          aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
         <div class="row">
           <div class="col-md-6 vertical-line-right">
             <h4 class="text-xs-center"> Signup </h4>
             <br>
-            <form #signupForm="ngForm" (ngSubmit)="signupSubmit()" class="form-horizontal" role="form">
+            <form #signupForm="ngForm" (ngSubmit)="signupSubmit()"
+              class="form-horizontal" role="form">
               <div class="form-group">
                 <div class="col-sm-12">
-                  <input [(ngModel)]="signup.username" #signupName="ngForm" ngControl="signupName" class="form-control" placeholder="choose a username" required minlength="5" maxlength="140" />
+                  <input [(ngModel)]="signup.username" #signupName="ngForm"
+                    ngControl="signupName"
+                    class="form-control" placeholder="choose a username"
+                    required minlength="5"
+                    maxlength="20" pattern="[a-zA-Z0-9_-]+"
+                  />
                   <div *ngIf="signupName.dirty" class="row col-sm-12 help-block text-danger">
                     <small *ngIf="signupName.errors?.required">A username is required</small>
                     <small *ngIf="signupName.errors?.minlength">Username must be more than 5 characters</small>
+                    <small *ngIf="signupName.errors?.pattern">Illegal Characters</small>
                   </div>
                 </div>
               </div>
               <div class="form-group">
                 <div class="col-sm-12">
-                  <input [(ngModel)]="signup.password" #signupPassword="ngForm" ngControl="signupPassword" type="password" class="form-control" placeholder="password" required />
+                  <input [(ngModel)]="signup.password" #signupPassword="ngForm"
+                    ngControl="signupPassword"
+                    type="password" class="form-control"
+                    placeholder="password"
+                    required />
                   <div *ngIf="signupPassword.dirty" class="row col-sm-12 help-block text-danger">
                     <small *ngIf="signupPassword.errors?.required">a password is required</small>
                   </div>
@@ -79,7 +103,12 @@
               </div>
               <div class="form-group">
                 <div class="col-sm-12">
-                  <input [(ngModel)]="signup.verifyPassword" #signupVerifyPassword="ngForm" ngControl="signupVerifyPassword" type="password" class="form-control" placeholder="verify password" required />
+                  <input [(ngModel)]="signup.verifyPassword"
+                    #signupVerifyPassword="ngForm"
+                    ngControl="signupVerifyPassword"
+                    type="password" class="form-control"
+                    placeholder="verify password"
+                    required />
                   <div *ngIf="signupVerifyPassword.dirty" class="row col-sm-12 help-block text-danger">
                     <small *ngIf="signupVerifyPassword.errors?.required">a password is required</small>
                   </div>
@@ -87,12 +116,20 @@
               </div>
               <div class="form-group">
                 <div class="col-sm-12">
-                  <input [(ngModel)]="signup.email" ngControl="signupEmail" class="form-control" placeholder="email (optional)" />
+                  <input [(ngModel)]="signup.email" #signupEmail="ngForm"
+                    ngControl="signupEmail"
+                    class="form-control" placeholder="email (optional)"
+                    pattern="\S+@\S+\.\S+"
+                  />
+                  <div *ngIf="signupEmail.dirty" class="row col-sm-12 help-block text-danger">
+                    <small *ngIf="signupEmail.errors?.pattern">Invalid Email</small>
+                  </div>
                 </div>
               </div>
               <div class="form-group">
                 <div class="col-sm-12">
-                  <button [disabled]="!signupForm.form.valid" type="submit" class="btn btn-primary btn-lg btn-block">Sign up</button>
+                  <button [disabled]="!signupForm.form.valid"
+                    type="submit" class="btn btn-primary btn-lg btn-block">Sign up</button>
                 </div>
               </div>
             </form>
@@ -101,10 +138,15 @@
           <div class="col-md-6">
             <h4 class="text-xs-center"> Log in </h4>
             <br>
-            <form #loginForm="ngForm" (ngSubmit)="loginSubmit()" class="form-horizontal">
+            <form #loginForm="ngForm" (ngSubmit)="loginSubmit()"
+              class="form-horizontal">
               <div class="form-group">
                 <div class="col-sm-12">
-                  <input [(ngModel)]="login.usernameOrEmail" #loginName="ngForm" ngControl="loginName" class="form-control" placeholder="username or email" minlength="5" maxlength="140" required />
+                  <input [(ngModel)]="login.usernameOrEmail"
+                    #loginName="ngForm" ngControl="loginName"
+                    class="form-control" placeholder="username or email"
+                    minlength="5" maxlength="140"
+                    required />
                   <div *ngIf="loginName.dirty" class="row col-sm-12 help-block text-danger">
                     <small *ngIf="loginName.errors?.required">A username is required</small>
                     <small *ngIf="loginName.errors?.minlength">Username must be more than 5 characters</small>
@@ -113,7 +155,11 @@
               </div>
               <div class="form-group">
                 <div class="col-sm-12">
-                  <input [(ngModel)]="login.password" #loginPassword="ngForm" ngControl="loginPassword" type="password" type="password" class="form-control" placeholder="password" required />
+                  <input [(ngModel)]="login.password" #loginPassword="ngForm"
+                    ngControl="loginPassword"
+                    type="password" type="password"
+                    class="form-control" placeholder="password"
+                    required />
                   <div *ngIf="loginPassword.dirty" class="row col-sm-12 help-block text-danger">
                     <small *ngIf="loginPassword.errors?.required">a password is required</small>
                   </div>
@@ -121,7 +167,8 @@
               </div>
               <div class="form-group">
                 <div class="col-sm-12">
-                  <button [disabled]="!loginForm.form.valid" type="submit" class="btn btn-primary btn-lg btn-block">Login</button>
+                  <button [disabled]="!loginForm.form.valid"
+                    type="submit" class="btn btn-primary btn-lg btn-block">Login</button>
                 </div>
               </div>
             </form>
